<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/familyMemberSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/familyMember" />

    <EditText
        android:id="@+id/systolicEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/systolic"
        android:inputType="number" />

    <EditText
        android:id="@+id/diastolicEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/diastolic"
        android:inputType="number" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report" />

    <ListView
        android:id="@+id/readingsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>